fix(max heap): Fix field data